--- a/dpnm/package.json
+++ b/dpnm/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-libnmap",
-  "version": "0.1.13",
-  "description": "Use nmap from node.js",
+  "name": "DPNM Monitor",
+  "version": "0.1",
+  "description": "Monitor various servers in the DP&NM Lab",
   "author": {
-    "name": "Jason Gerfen",
-    "email": "jason.gerfen@gmail.com"
+    "name": "Joseph Lee",
+    "email": "josephl@live.ca"
   },
   "keywords": [
     "nmap",
@@ -13,14 +13,12 @@
     "threaded nmap scanner",
     "network host discovery",
     "host operating system discovery",
-    "port scanner"
+    "port scanner",
+    "monitoring"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jas-/node-libnmap.git"
-  },
-  "bugs": {
-    "url": "https://github.com/jas-/node-libnmap/issues"
+    "url": "git+https://github.com/josephlee427/page.git"
   },
   "scripts": {
     "start": "node index.js",
@@ -47,13 +45,13 @@
   "_from": "node-libnmap@*",
   "_npmVersion": "1.4.28",
   "_npmUser": {
-    "name": "jas-",
-    "email": "jason.gerfen@gmail.com"
+    "name": "josephlee427",
+    "email": "josephl@live.ca"
   },
   "maintainers": [
     {
-      "name": "jas-",
-      "email": "jason.gerfen@gmail.com"
+      "name": "josephlee427",
+      "email": "josephl@live.ca"
     }
   ],
   "dist": {
